ecmascript/parser/tests/typescript-errors/tsc/decorators/invalid/decoratorOnImportEquals2/input.ts.stderr
error: Decorators are not valid here
 --> $DIR/tests/typescript-errors/tsc/decorators/invalid/decoratorOnImportEquals2/input.ts:6:1
  |
6 | @dec
  | ^^^^

